Fixed z-index settings for select and span.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.Admin.ProcessManagement.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.Admin.ProcessManagement.css
@@ -569,7 +569,6 @@ ul.Path li.StartActivity, ul.Path li.EndActivity {
     background-color: #fff;
     border: 1px solid #444;
     border-radius: 10px;
-    position: relative;
     z-index: 2;
     font-size: 12px;
     line-height: 80px;
@@ -586,7 +585,7 @@ ul.Path li.Transition {
     padding-top: 30px;
 }
 
-ul.Path li.Transiton > select {
+ul.Path li.Transition > select {
     width: 200px;
     position: absolute;
     top: 30px;
@@ -596,13 +595,13 @@ ul.Path li.Transiton > select {
 }
 
 ul.Path li.Transition > span {
-    width: 450px;
+    width: 446px;
+    height: 2px;
+    border-top: 1px solid #444;
     position: absolute;
     top: 38px;
     left: 0;
     z-index: 1;
-    border-top: 1px solid #444;
-    height: 2px;
 }
 
 #EditPath {
